# specmap

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  MANUAL_E2E_TEST.md  PLAN.md  README.md  SPEC.md  docker-compose.yml  hatch_build.py  justfile  localhost+2-key.pem  localhost+2.pem  mkdocs.yml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: docs.yml  publish.yml
.specmap/: .gitignore  specmap.db-shm  specmap.db-wal
0.4/: 404.html  index.html  sitemap.xml
0.4/cli/ci/: index.html
0.4/development/: index.html
0.4/roadmap/: index.html
0.4/roadmap-pr-comments/: index.html
0.4/search/: search_index.json
0.5/: 404.html  index.html  sitemap.xml
0.5/development/: index.html
0.5/roadmap/: index.html
0.5/roadmap-pr-comments/: index.html
0.5/search/: search_index.json
api/: go.mod  go.sum
api/migrations/: 001_initial.down.sql  001_initial.up.sql  002_drop_spec_coverage.down.sql  002_drop_spec_coverage.up.sql  003_installations.down.sql  003_installations.up.sql
cli/: go.mod  main.go
cli/cmd/: check.go  root.go  status.go  validate.go
core/: hatch_build.py  pyproject.toml
core/src/specmap/: config.py
core/src/specmap/cli/: __init__.py
core/src/specmap/cli/commands/: check.py  serve.py  status.py  validate.py
core/src/specmap/indexer/: code_analyzer.py  diff_optimizer.py  hasher.py  mapper.py  spec_parser.py  validator.py
core/src/specmap/llm/: client.py  prompts.py
core/src/specmap/mcp/: __init__.py  __main__.py  server.py
core/src/specmap/server/: app.py  auth.py  config.py  db.py  generate.py  github.py  models.py  schema.sql  spa.py  static.py
core/src/specmap/state/: models.py  relocator.py  specmap_file.py
core/src/specmap/tools/: annotate.py  check_sync.py  get_unmapped.py  map_code_to_spec.py  reindex.py
core/tests/: conftest.py  test_code_analyzer.py  test_diff_optimizer.py  test_hasher.py  test_models.py  test_relocator.py  test_specmap_file.py  test_validator.py
core/web/: package-lock.json  vite.config.ts
core/web/src/api/: client.ts
core/web/src/components/diff/: AnnotationWidget.tsx  HunkExpander.tsx
core/web/src/components/layout/: AppShell.tsx
core/web/src/components/review/: AnnotationNav.tsx  ReviewToolbar.tsx
core/web/src/hooks/: useAnnotationSpacers.ts
core/web/src/pages/: PRReviewPage.tsx
core/web/src/stores/: reviewStore.ts
docs/: development.md  index.md  requirements.txt  roadmap-pr-comments.md  roadmap.md
docs/cli/: ci.md  commands.md  overview.md
docs/concepts/: architecture.md  coverage.md  format.md  hashing.md  versioning.md
docs/deployment/: production.md
docs/getting-started/: configuration.md  installation.md  local-dev.md  quickstart.md
docs/mcp/: llm.md  overview.md  tools.md
docs/web-ui/: code-review.md  generating-annotations.md  overview.md  walkthroughs.md
infra/: acm.tf  alb.tf  bootstrap.sh  budget.tf  cloudfront.tf  ecr.tf  ecs.tf  iam.tf  logs.tf  main.tf  outputs.tf  rds.tf  secrets.tf  security_groups.tf  terraform.tfvars.example  variables.tf  vpc.tf  waf.tf
mcp/: pyproject.toml
mcp/tests/: conftest.py  test_code_analyzer.py  test_hasher.py  test_models.py  test_relocator.py  test_spec_parser.py  test_specmap_file.py
src/specmap/: __init__.py  config.py
tests/: conftest.py
tests/harness/: __init__.py  assertions.py  cli.py  code_content.py  llm_mock.py  repo.py  spec_content.py
tests/scenarios/: __init__.py  test_branch.py  test_config.py  test_coverage.py  test_cross_component.py  test_errors.py  test_greenfield.py  test_iterative.py  test_spec_evolution.py
tests/unit/: test_code_analyzer.py  test_mapper_filter.py  test_spec_parser.py  test_specmap_file.py  test_validator.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  index.css
(+194 files in other folders)
