[project]
name = "specmap"
version = "0.2.16"
description = "Spec-to-code mapping: core library, MCP server, and CLI"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "litellm>=1.30.0",
    "pydantic>=2.0.0",
    "mistune>=3.0.0",
    "unidiff>=0.7.0",
    "typer>=0.12.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.29.0",
    "httpx>=0.27.0",
    "pyjwt>=2.8.0",
    "cryptography>=42.0.0",
    "questionary>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[project.scripts]
specmap = "specmap.cli:app"
specmap-mcp = "specmap.mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = ["web/node_modules", "web/dist"]

[tool.hatch.build.targets.wheel]
packages = ["src/specmap"]

[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"

[tool.pytest.ini_options]
testpaths = ["tests/unit"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100
