[project]
name = "specmap"
version = "0.1.0"
description = "Spec-to-code mapping: core library, MCP server, and CLI"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "litellm>=1.30.0",
    "pydantic>=2.0.0",
    "mistune>=3.0.0",
    "unidiff>=0.7.0",
    "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[project.scripts]
specmap = "specmap.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/specmap"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100
